Build new Feature and Fix some old bug