@@ -1,14 +1,22 @@
 package com.nexflow.nexflow_backend.config;
 
+import com.nexflow.nexflow_backend.security.JwtAuthFilter;
+import com.nexflow.nexflow_backend.security.OAuth2SuccessHandler;
+import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpMethod;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.http.HttpMethod;
-
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.header.writers.ReferrerPolicyHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -18,7 +26,12 @@ import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity          // enables @PreAuthorize on controller methods
+@RequiredArgsConstructor
 public class SecurityConfig {
+
+    private final JwtAuthFilter       jwtAuthFilter;
+    private final OAuth2SuccessHandler oauth2SuccessHandler;
 
     @Value("${app.cors.allowed-origins:http://localhost:3000,http://localhost:3001}")
     private String allowedOrigins;
@@ -28,13 +41,41 @@ public class SecurityConfig {
         http
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(AbstractHttpConfigurer::disable)
+            .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .exceptionHandling(e -> e
+                .authenticationEntryPoint((req, res, ex) ->
+                    res.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized"))
+            )
+            .headers(headers -> headers
+                .frameOptions(HeadersConfigurer.FrameOptionsConfig::deny)
+                .contentTypeOptions(HeadersConfigurer.ContentTypeOptionsConfig::disable) // re-enabled via filter
+                .httpStrictTransportSecurity(hsts -> hsts
+                    .includeSubDomains(true)
+                    .maxAgeInSeconds(31_536_000))
+                .referrerPolicy(referrer -> referrer
+                    .policy(ReferrerPolicyHeaderWriter.ReferrerPolicy.STRICT_ORIGIN_WHEN_CROSS_ORIGIN))
+            )
             .authorizeHttpRequests(auth -> auth
-                // ✅ HARD FIX: allow ALL OPTIONS requests
+                // Pre-flight
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-
-                // ✅ fallback
-                .anyRequest().permitAll()
-            );
+                // Auth endpoints (public)
+                .requestMatchers("/api/auth/**").permitAll()
+                // External webhook triggers (public — rate-limited by RateLimitFilter)
+                .requestMatchers("/api/pulse/**").permitAll()
+                // Actuator health only
+                .requestMatchers("/actuator/health").permitAll()
+                .requestMatchers("/actuator/**").hasRole("ADMIN")
+                // WebSocket endpoints
+                .requestMatchers("/ws/**", "/topic/**", "/app/**").permitAll()
+                // OAuth2 redirect endpoints
+                .requestMatchers("/oauth2/**", "/login/oauth2/**").permitAll()
+                // Everything else requires authentication
+                .anyRequest().authenticated()
+            )
+            .oauth2Login(oauth2 -> oauth2
+                .successHandler(oauth2SuccessHandler)
+            )
+            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -43,29 +84,26 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // app.cors.allowed-origins is a comma-separated list of full origins
-        // (scheme + host + optional port), e.g.:
-        //   https://your-domain.com,http://ec2-ip:3001
         List<String> origins = Arrays.stream(allowedOrigins.split("\\s*,\\s*"))
                 .map(String::trim)
                 .filter(s -> !s.isBlank())
                 .toList();
 
-        // If nothing is configured, fall back to local dev defaults.
         if (origins.isEmpty()) {
             origins = List.of("http://localhost:3000", "http://localhost:3001");
         }
 
-        // Use origin patterns so exact origins and wildcard patterns both work.
         config.setAllowedOriginPatterns(origins);
-
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedHeaders(List.of(
+                "Authorization", "Content-Type", "Accept",
+                "X-Studio-Trigger", "X-Requested-With", "X-Pulse-Key"
+        ));
+        config.setExposedHeaders(List.of("Set-Cookie"));
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-
         return source;
     }
 }
